[package]
name = "stati"
version = "0.6.6-beta"
edition = "2021"
license = "MIT"
authors = ["Rowan S-L <rowan@fawkes.io>"]
description = "A library for progress (bars)"
repository = "https://github.com/rowan-sl/stati/"
keywords = ["cli", "terminal", "bar", "progress"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminal_size = "0.1.17"

[lib]
name = "stati"
path = "src/lib.rs"
