[package]
name = "stati"
version = "0.11.0-beta"
edition = "2021"
license = "MIT"
authors = ["Rowan S-L <rowan@fawkes.io>"]
description = "A library for progress (bars)"
repository = "https://github.com/rowan-sl/stati/"
keywords = ["cli", "terminal", "bar", "progress"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminal_size = "0.1.17"
parking_lot = "0.12.0"
thiserror = "1.0.30"

[dev-dependencies]
anyhow = "1.0.55"

[features]
default = ["fairness"]
fairness = []
nightly = []

[workspace]
members = [
    "stati-testing"
]
